# concadaptr

./: .gitignore  CLAUDE.md  README.md  __init__.py  base.py  config.py  config.yaml  model.py  pyproject.toml  server.py  soft_merging.py  test_core.py  top_k.py  trainer.py  visualization.py  xlora.py
.claude/docs/: architectural_patterns.md  test-skills.md
concadptr/: __init__.py  config.py  model.py  trainer.py
concadptr/adapters/: __init__.py
concadptr/benchmarks/: __init__.py  config.py  metrics.py  runner.py  tasks.py
concadptr/merging/: __init__.py  base.py  dare.py  linear.py  progressive.py  ties.py  utils.py
concadptr/router/: __init__.py
concadptr/serving/: __init__.py
concadptr/utils/: __init__.py  visualization.py
docs/: testplan.md
mnt/user-data/outputs/concadpt/concadpt/adapters/: __init__.py
tests/: conftest.py  test_adapters.py  test_benchmarks.py  test_config.py  test_hub.py  test_merging.py  test_model.py  test_progressive.py  test_routers.py  test_server.py  test_trainer.py
