[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concadpt"
version = "0.1.0"
description = "Fuse multiple LoRA adapters into Mixture-of-Experts systems. Train → Compose → Serve."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Irfan Ali", email = "irfan@example.com" },
]
keywords = [
    "lora", "mixture-of-experts", "moe", "fine-tuning", "peft",
    "llm", "transformers", "adapter", "molora", "concadpt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "safetensors>=0.4.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
training = [
    "bitsandbytes>=0.41.0",
    "trl>=0.7.0",
]
serving = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
all = ["concadpt[training,serving,dev]"]

[project.urls]
Homepage = "https://github.com/irfanalii/concadpt"
Documentation = "https://github.com/irfanalii/concadpt#readme"
Repository = "https://github.com/irfanalii/concadpt"
Issues = "https://github.com/irfanalii/concadpt/issues"

[tool.setuptools.packages.find]
include = ["concadpt*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
